--- a/source/scss/components/_main-progress.scss
+++ b/source/scss/components/_main-progress.scss
@@ -5,29 +5,8 @@
         @include fontGradientProperties($start: $gradientHistogramStart, $end: $gradientHistogramEnd);
         padding-bottom: 10px;
     }
-    span {
-        @include fontProperties($color: $colorSubtitle);
-        position: relative;
-        padding: 8px;
-        &:first-of-type {
-            margin-left: 8px;
-        }
-        &:first-of-type:before {
-            content: '';
-            position: absolute;
-            bottom: 12px;
-            left: -2px;
-            border: 3px solid transparent;
-            border-bottom: 6px solid $colorTriangle;
-        }
-        &:last-of-type:before {
-            content: '';
-            position: absolute;
-            top: 12px;
-            left: -2px;
-            border: 3px solid transparent;
-            border-top: 6px solid $colorTaskTitle;
-        }
+    span:first-of-type {
+        margin-left: 8px;
     }
 }
 
@@ -45,8 +24,7 @@
         background: $colorBackground;
         border-radius: 6px;
         &:after {
-            content: '';
-            position: absolute;
+            @extend %absPosition;
             bottom: 0;
             left: 0;
             width: 100%;
