--- a/source/scss/components/_main-revenue-hour.scss
+++ b/source/scss/components/_main-revenue-hour.scss
@@ -1,29 +1,8 @@
 .revenue-hour {
     align-items: center;
     padding: 30px 70px;
-    span {
-        @include fontProperties($color: $colorSubtitle);
-        position: relative;
-        padding: 8px;
-        &:first-of-type {
-            margin-left: 8px;
-        }
-        &:first-of-type:before {
-            content: '';
-            position: absolute;
-            bottom: 12px;
-            left: -2px;
-            border: 3px solid transparent;
-            border-bottom: 6px solid $colorTriangle;
-        }
-        &:last-of-type:before {
-            content: '';
-            position: absolute;
-            top: 12px;
-            left: -2px;
-            border: 3px solid transparent;
-            border-top: 6px solid $colorTaskTitle;
-        }
+    span:first-of-type {
+        margin-left: 8px;
     }
 }
 
@@ -32,28 +11,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 124px;
-    height: 124px;
-    border-radius: 50%;
+    @include circle(124px);
     background: $colorSearch url(../img/main/circle-percentage.png) no-repeat center/cover;
     &:before {
-        content: '';
-        position: absolute;
+        @extend %absPosition;
         top: 10px;
         left: 10px;
-        width: 104px;
-        height: 104px;
-        border-radius: 50%;
+        @include circle(104px);
         background: $colorBase;
     }
     &:after {
-        content: '';
-        position: absolute;
+        @extend %absPosition;
         top: 18px;
         left: 18px;
-        width: 88px;
-        height: 88px;
-        border-radius: 50%;
+        @include circle(88px);
         background: $colorBase;
         box-shadow: 0 0 3px 3px $colorSearch;
     }
