--- a/source/scss/components/_main-shipments.scss
+++ b/source/scss/components/_main-shipments.scss
@@ -1,6 +1,6 @@
 .shipments {
     align-items: center;
-    padding: 30px 20px;
+    padding: 30px 20px 15px;
     .shipments__numbers {
         align-self: stretch;
         display: flex;
@@ -9,27 +9,6 @@
     h2 {
         margin-right: auto;
     }
-    span {
-        @include fontProperties($color: $colorSubtitle);
-        position: relative;
-        padding: 8px;
-        &:first-of-type:before {
-            content: '';
-            position: absolute;
-            bottom: 12px;
-            left: -2px;
-            border: 3px solid transparent;
-            border-bottom: 6px solid $colorTriangle;
-        }
-        &:last-of-type:before {
-            content: '';
-            position: absolute;
-            top: 12px;
-            left: -2px;
-            border: 3px solid transparent;
-            border-top: 6px solid $colorTaskTitle;
-        }
-    }   
 }
 
 .usa-map {
@@ -40,8 +19,7 @@
     margin: 20px 4px;
     background: url(../img/main/usa-map.png) no-repeat center/100% 100%;
     .usa-map__item {
-        content: '';
-        position: absolute;
+        @extend %absPosition;
         width: 15px;
         height: 21px;
         @include gradient();
