--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -148,6 +148,11 @@ template, [hidden] {
   display: none;
 }
 
+span:first-of-type:before, span:last-of-type:before, i:before, i:after, .sidebar__wrapper a:after, .red-mark:after, .nav__search:after, .burger:before, .burger:after, .months .line-red, .months .line-blue, .months .line-purple, .circle:before, .circle:after, .feed p:not(:first-child):before, .tasks .clock:before, .tasks label:before, .tasks label:after, .bar-chart .bar-chart__item:after, .usa-map .usa-map__item, aside form a:after, .search:after {
+  content: '';
+  position: absolute;
+}
+
 p {
   font-size: 12px;
   font-weight: 700;
@@ -185,6 +190,53 @@ h6 {
   font-size: 8px;
   font-weight: 400;
   color: #979797;
+}
+
+span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #bfbfbf;
+  position: relative;
+  display: inline-block;
+  padding: 8px;
+}
+
+span:first-of-type:before {
+  left: -2px;
+  border: 3px solid transparent;
+  border-bottom: 6px solid #a889e9;
+}
+
+span:last-of-type:before {
+  left: -2px;
+  border: 3px solid transparent;
+  border-top: 6px solid #fd566f;
+}
+
+i {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #ffffff;
+  position: relative;
+  display: block;
+  margin: 6px auto;
+}
+
+i:before {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #ffffff;
+  right: 8px;
+}
+
+i:after {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #ffffff;
+  left: 8px;
 }
 
 .for-nav {
@@ -319,23 +371,17 @@ h6 {
 }
 
 .sidebar__wrapper a:after {
-  content: '';
-  position: absolute;
   top: 50%;
   left: calc(100% - 3.5px);
   display: none;
-  width: 7px;
-  height: 7px;
+  width: 4px;
+  height: 4px;
   background: #c54556;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
 
 .sidebar__wrapper a:last-child:hover:after {
-  display: none;
-}
-
-input[type="radio"] {
   display: none;
 }
 
@@ -398,7 +444,6 @@ header h4 {
 }
 
 .read-more {
-  position: relative;
   width: 34px;
   height: 18px;
   background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
@@ -406,65 +451,52 @@ header h4 {
   border-radius: 9px;
 }
 
-.read-more span {
-  position: relative;
-  display: block;
-  width: 6px;
-  height: 6px;
-  margin: 6px auto;
-  border-radius: 3px;
-  background: #ffffff;
-}
-
-.read-more span:before {
-  content: '';
-  position: absolute;
-  right: 8px;
-  width: 6px;
-  height: 6px;
-  border-radius: 3px;
-  background: #ffffff;
-}
-
-.read-more span:after {
-  content: '';
-  position: absolute;
-  left: 8px;
-  width: 6px;
-  height: 6px;
-  border-radius: 3px;
-  background: #ffffff;
-}
-
-.icon {
+.icon--folder {
   width: 20px;
   height: 100%;
   background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
   background: linear-gradient(270deg, #fc7858, #fd4e75);
   background-clip: content-box;
-}
-
-.icon--folder {
   -webkit-mask: url(../img/header/folder.png) no-repeat center;
           mask: url(../img/header/folder.png) no-repeat center;
 }
 
 .icon--setup {
+  width: 20px;
+  height: 100%;
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
+  background-clip: content-box;
   -webkit-mask: url(../img/header/setup.png) no-repeat center;
           mask: url(../img/header/setup.png) no-repeat center;
 }
 
 .icon--upload {
+  width: 20px;
+  height: 100%;
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
+  background-clip: content-box;
   -webkit-mask: url(../img/header/upload.png) no-repeat center;
           mask: url(../img/header/upload.png) no-repeat center;
 }
 
 .icon--email {
+  width: 20px;
+  height: 100%;
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
+  background-clip: content-box;
   -webkit-mask: url(../img/header/email.png) no-repeat center;
           mask: url(../img/header/email.png) no-repeat center;
 }
 
 .icon--earth {
+  width: 20px;
+  height: 100%;
+  background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
+  background: linear-gradient(270deg, #fc7858, #fd4e75);
+  background-clip: content-box;
   -webkit-mask: url(../img/header/earth.png) no-repeat center;
           mask: url(../img/header/earth.png) no-repeat center;
 }
@@ -474,8 +506,6 @@ header h4 {
 }
 
 .red-mark:after {
-  content: '';
-  position: absolute;
   top: calc(50% - 16px);
   right: calc(50% - 16px);
   width: 6px;
@@ -519,11 +549,10 @@ header h4 {
 }
 
 .nav__search:after {
-  content: '';
-  position: absolute;
   right: calc(50% - 137px);
   width: 16px;
   height: 16px;
+  border-radius: 50%;
   background: url(../img/search.png) no-repeat center/cover;
 }
 
@@ -544,14 +573,12 @@ header h4 {
       align-self: center;
   width: 4px;
   height: 4px;
-  margin: 0 19px;
   border-radius: 50%;
+  margin: 0 19px;
   background: #bfbfbf;
 }
 
 .burger:before {
-  content: '';
-  position: absolute;
   top: -6px;
   width: 4px;
   height: 4px;
@@ -560,8 +587,6 @@ header h4 {
 }
 
 .burger:after {
-  content: '';
-  position: absolute;
   top: 6px;
   width: 4px;
   height: 4px;
@@ -604,32 +629,6 @@ header h4 {
 
 .item p {
   padding-bottom: 9px;
-}
-
-.item span {
-  font-size: 12px;
-  font-weight: 700;
-  color: #bfbfbf;
-  position: relative;
-  padding: 8px;
-}
-
-.item span:first-of-type:before {
-  content: '';
-  position: absolute;
-  bottom: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-bottom: 6px solid #a889e9;
-}
-
-.item span:last-of-type:before {
-  content: '';
-  position: absolute;
-  top: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-top: 6px solid #fd566f;
 }
 
 .add {
@@ -854,8 +853,6 @@ main section {
 }
 
 .months .line-red {
-  content: '';
-  position: absolute;
   top: -85px;
   left: 0;
   width: 579px;
@@ -865,8 +862,6 @@ main section {
 }
 
 .months .line-blue {
-  content: '';
-  position: absolute;
   top: -85px;
   left: 0;
   width: 579px;
@@ -876,8 +871,6 @@ main section {
 }
 
 .months .line-purple {
-  content: '';
-  position: absolute;
   top: -74px;
   left: 0;
   width: 579px;
@@ -892,34 +885,8 @@ main section {
   padding: 30px 70px;
 }
 
-.revenue-hour span {
-  font-size: 12px;
-  font-weight: 700;
-  color: #bfbfbf;
-  position: relative;
-  padding: 8px;
-}
-
 .revenue-hour span:first-of-type {
   margin-left: 8px;
-}
-
-.revenue-hour span:first-of-type:before {
-  content: '';
-  position: absolute;
-  bottom: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-bottom: 6px solid #a889e9;
-}
-
-.revenue-hour span:last-of-type:before {
-  content: '';
-  position: absolute;
-  top: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-top: 6px solid #fd566f;
 }
 
 .circle {
@@ -940,8 +907,6 @@ main section {
 }
 
 .circle:before {
-  content: '';
-  position: absolute;
   top: 10px;
   left: 10px;
   width: 104px;
@@ -951,8 +916,6 @@ main section {
 }
 
 .circle:after {
-  content: '';
-  position: absolute;
   top: 18px;
   left: 18px;
   width: 88px;
@@ -1014,8 +977,6 @@ main section {
 }
 
 .feed p:not(:first-child):before {
-  content: '';
-  position: absolute;
   top: 0;
   left: -17px;
   width: 4px;
@@ -1109,8 +1070,6 @@ main section {
 }
 
 .tasks .clock:before {
-  content: '';
-  position: absolute;
   top: 3px;
   left: -17px;
   width: 12px;
@@ -1135,19 +1094,15 @@ main section {
 }
 
 .tasks label:before {
-  content: '';
-  position: absolute;
   left: 2px;
   width: 15px;
   height: 15px;
-  background: #ffffff;
   border-radius: 50%;
+  background: #ffffff;
   border: 2px solid #f1f1f1;
 }
 
 .tasks label:after {
-  content: '';
-  position: absolute;
   top: 4px;
   left: 9px;
   width: 3px;
@@ -1175,34 +1130,8 @@ main section {
   padding-bottom: 10px;
 }
 
-.progress span {
-  font-size: 12px;
-  font-weight: 700;
-  color: #bfbfbf;
-  position: relative;
-  padding: 8px;
-}
-
 .progress span:first-of-type {
   margin-left: 8px;
-}
-
-.progress span:first-of-type:before {
-  content: '';
-  position: absolute;
-  bottom: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-bottom: 6px solid #a889e9;
-}
-
-.progress span:last-of-type:before {
-  content: '';
-  position: absolute;
-  top: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-top: 6px solid #fd566f;
 }
 
 .bar-chart {
@@ -1230,8 +1159,6 @@ main section {
 }
 
 .bar-chart .bar-chart__item:after {
-  content: '';
-  position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -1256,7 +1183,7 @@ main section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 30px 20px;
+  padding: 30px 20px 15px;
 }
 
 .shipments .shipments__numbers {
@@ -1274,32 +1201,6 @@ main section {
   margin-right: auto;
 }
 
-.shipments span {
-  font-size: 12px;
-  font-weight: 700;
-  color: #bfbfbf;
-  position: relative;
-  padding: 8px;
-}
-
-.shipments span:first-of-type:before {
-  content: '';
-  position: absolute;
-  bottom: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-bottom: 6px solid #a889e9;
-}
-
-.shipments span:last-of-type:before {
-  content: '';
-  position: absolute;
-  top: 12px;
-  left: -2px;
-  border: 3px solid transparent;
-  border-top: 6px solid #fd566f;
-}
-
 .usa-map {
   position: relative;
   -webkit-box-flex: 1;
@@ -1314,8 +1215,6 @@ main section {
 }
 
 .usa-map .usa-map__item {
-  content: '';
-  position: absolute;
   width: 15px;
   height: 21px;
   background: -webkit-gradient(linear, right top, left top, from(#fc7858), to(#fd4e75));
@@ -1399,8 +1298,6 @@ aside form a:hover:after {
 }
 
 aside form a:after {
-  content: '';
-  position: absolute;
   top: calc(100% - 5px);
   left: calc(50% - 5px);
   display: none;
@@ -1414,18 +1311,20 @@ aside form a:after {
 aside label {
   display: block;
   height: 48px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-aside label[for="aside__btn-1"] {
-  background: url(../img/chat/users.png) no-repeat center;
+aside label[for*="users"] {
+  background-image: url(../img/chat/users.png);
 }
 
-aside label[for="aside__btn-2"] {
-  background: url(../img/chat/chat.png) no-repeat center;
+aside label[for*="chat"] {
+  background-image: url(../img/chat/chat.png);
 }
 
-aside label[for="aside__btn-3"] {
-  background: url(../img/chat/like.png) no-repeat center;
+aside label[for*="like"] {
+  background-image: url(../img/chat/like.png);
 }
 
 .contacts {
@@ -1482,8 +1381,6 @@ aside label[for="aside__btn-3"] {
 }
 
 .search:after {
-  content: '';
-  position: absolute;
   right: calc(26% - 19px);
   width: 19px;
   height: 19px;
@@ -1555,9 +1452,9 @@ li a {
           align-items: center;
   width: 55px;
   height: 55px;
+  border-radius: 30%;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 30%;
 }
 
 a[href*="rdio"] {
@@ -1582,6 +1479,10 @@ a[href*="vimeo"] {
 
 a[href*="vk"] {
   background-image: url(../img/logo/vk.png), linear-gradient(315deg, #f48982, #fbda89);
+}
+
+input[type="radio"] {
+  display: none;
 }
 
 .wrapper {
@@ -1688,7 +1589,8 @@ a[href*="vk"] {
   }
   .sidebar {
     position: fixed;
-    left: -60px;
+    left: -45px;
+    border-right: 20px solid transparent;
   }
   .sidebar:hover {
     left: 0;
@@ -1722,13 +1624,19 @@ a[href*="vk"] {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .tasks li:hover {
+    height: 200px;
   }
   aside {
     position: fixed;
     bottom: 10%;
-    right: -260px;
+    right: -246px;
     height: 50vh;
     width: 271px;
+    border-left: 20px solid transparent;
   }
   aside:hover {
     right: 0;
