--- a/source/scss/global/_mixins.scss
+++ b/source/scss/global/_mixins.scss
@@ -48,6 +48,12 @@
     }
 }
 
+@mixin forButtonsNav($nameButton) {
+    &[for*="#{$nameButton}"] {
+        background-image: url(../img/nav/#{$nameButton}.png);
+    }
+}
+
 @mixin forButtonsHeader($nameButton) {
     .icon--#{$nameButton} {
         width: 20px;
